--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -195,13 +195,13 @@
   -o-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  -webkit-animation: blur-animation 1s;
-  -moz-animation: blur-animation 1s;
-  -o-animation: blur-animation 1s;
-  animation: blur-animation 1s;
+  -webkit-animation: light-blur-animation 0.3s;
+  -moz-animation: light-blur-animation 0.3s;
+  -o-animation: light-blur-animation 0.3s;
+  animation: light-blur-animation 0.3s;
 }
 
-@-webkit-keyframes blur-animation {
+@-webkit-keyframes light-blur-animation {
   /* line 25, ../scss/partials/_functions.scss */
   0% {
     -webkit-filter: blur(0px);
@@ -210,8 +210,8 @@
 
   /* line 28, ../scss/partials/_functions.scss */
   50% {
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
   }
 
   /* line 31, ../scss/partials/_functions.scss */
@@ -220,7 +220,7 @@
     filter: blur(0px);
   }
 }
-@-moz-keyframes blur-animation {
+@-moz-keyframes light-blur-animation {
   /* line 25, ../scss/partials/_functions.scss */
   0% {
     -webkit-filter: blur(0px);
@@ -229,8 +229,8 @@
 
   /* line 28, ../scss/partials/_functions.scss */
   50% {
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
   }
 
   /* line 31, ../scss/partials/_functions.scss */
@@ -239,7 +239,7 @@
     filter: blur(0px);
   }
 }
-@-ms-keyframes blur-animation {
+@-ms-keyframes light-blur-animation {
   /* line 25, ../scss/partials/_functions.scss */
   0% {
     -webkit-filter: blur(0px);
@@ -248,8 +248,8 @@
 
   /* line 28, ../scss/partials/_functions.scss */
   50% {
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
   }
 
   /* line 31, ../scss/partials/_functions.scss */
@@ -258,7 +258,7 @@
     filter: blur(0px);
   }
 }
-@keyframes blur-animation {
+@keyframes light-blur-animation {
   /* line 25, ../scss/partials/_functions.scss */
   0% {
     -webkit-filter: blur(0px);
@@ -267,8 +267,8 @@
 
   /* line 28, ../scss/partials/_functions.scss */
   50% {
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
   }
 
   /* line 31, ../scss/partials/_functions.scss */
