--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -163,13 +163,45 @@
 */
 /* line 7, ../scss/partials/_functions.scss */
 .buzzed-transition {
-  -moz-transition: all 0.5s ease-out;
-  -o-transition: all 0.5s ease-out;
-  -webkit-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 /* line 10, ../scss/partials/_functions.scss */
+.im-fine-transition {
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+/* line 13, ../scss/partials/_functions.scss */
+.drunk-transition {
+  -moz-transition: all 2s ease-in-out;
+  -o-transition: all 2s ease-in-out;
+  -webkit-transition: all 2s ease-in-out;
+  transition: all 2s ease-in-out;
+}
+
+/* line 16, ../scss/partials/_functions.scss */
+.wooo-transition {
+  -moz-transition: all 3s ease-in-out;
+  -o-transition: all 3s ease-in-out;
+  -webkit-transition: all 3s ease-in-out;
+  transition: all 3s ease-in-out;
+}
+
+/* line 19, ../scss/partials/_functions.scss */
+.blackout-transition {
+  -moz-transition: all 5s ease-in-out;
+  -o-transition: all 5s ease-in-out;
+  -webkit-transition: all 5s ease-in-out;
+  transition: all 5s ease-in-out;
+}
+
+/* line 22, ../scss/partials/_functions.scss */
 .transition-ease-out {
   -moz-transition: all 2s ease-out;
   -o-transition: all 2s ease-out;
@@ -177,7 +209,7 @@
   transition: all 2s ease-out;
 }
 
-/* line 13, ../scss/partials/_functions.scss */
+/* line 25, ../scss/partials/_functions.scss */
 .hardware-acceleration {
   -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
@@ -188,50 +220,50 @@
 }
 
 /* boozy focus section */
-/* line 18, ../scss/partials/_functions.scss */
+/* line 30, ../scss/partials/_functions.scss */
 .blur-6 {
   -webkit-filter: blur(6px);
   filter: blur(6px);
 }
 
-/* line 21, ../scss/partials/_functions.scss */
+/* line 33, ../scss/partials/_functions.scss */
 .blur-5 {
   -webkit-filter: blur(5px);
   filter: blur(5px);
 }
 
-/* line 24, ../scss/partials/_functions.scss */
+/* line 36, ../scss/partials/_functions.scss */
 .blur-4 {
   -webkit-filter: blur(4px);
   filter: blur(4px);
 }
 
-/* line 27, ../scss/partials/_functions.scss */
+/* line 39, ../scss/partials/_functions.scss */
 .blur-3 {
   -webkit-filter: blur(3px);
   filter: blur(3px);
 }
 
-/* line 30, ../scss/partials/_functions.scss */
+/* line 42, ../scss/partials/_functions.scss */
 .blur-2 {
   -webkit-filter: blur(2px);
   filter: blur(2px);
 }
 
-/* line 33, ../scss/partials/_functions.scss */
+/* line 45, ../scss/partials/_functions.scss */
 .blur-1 {
   -webkit-filter: blur(1px);
   filter: blur(1px);
 }
 
-/* line 36, ../scss/partials/_functions.scss */
+/* line 48, ../scss/partials/_functions.scss */
 .blur-0 {
   -webkit-filter: blur(0px);
   filter: blur(0px);
 }
 
 /* boozy lean section */
-/* line 41, ../scss/partials/_functions.scss */
+/* line 53, ../scss/partials/_functions.scss */
 .rotate-5 {
   -moz-transform: rotate(5deg);
   -ms-transform: rotate(5deg);
@@ -239,7 +271,7 @@
   transform: rotate(5deg);
 }
 
-/* line 44, ../scss/partials/_functions.scss */
+/* line 56, ../scss/partials/_functions.scss */
 .rotate-4 {
   -moz-transform: rotate(4deg);
   -ms-transform: rotate(4deg);
@@ -247,7 +279,7 @@
   transform: rotate(4deg);
 }
 
-/* line 47, ../scss/partials/_functions.scss */
+/* line 59, ../scss/partials/_functions.scss */
 .rotate-3 {
   -moz-transform: rotate(3deg);
   -ms-transform: rotate(3deg);
@@ -255,7 +287,7 @@
   transform: rotate(3deg);
 }
 
-/* line 50, ../scss/partials/_functions.scss */
+/* line 62, ../scss/partials/_functions.scss */
 .rotate-2 {
   -moz-transform: rotate(2deg);
   -ms-transform: rotate(2deg);
@@ -263,7 +295,7 @@
   transform: rotate(2deg);
 }
 
-/* line 53, ../scss/partials/_functions.scss */
+/* line 65, ../scss/partials/_functions.scss */
 .rotate-1 {
   -moz-transform: rotate(1deg);
   -ms-transform: rotate(1deg);
@@ -271,7 +303,7 @@
   transform: rotate(1deg);
 }
 
-/* line 56, ../scss/partials/_functions.scss */
+/* line 68, ../scss/partials/_functions.scss */
 .rotate-0 {
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
@@ -279,7 +311,7 @@
   transform: rotate(0deg);
 }
 
-/* line 59, ../scss/partials/_functions.scss */
+/* line 71, ../scss/partials/_functions.scss */
 .rotate-neg-1 {
   -moz-transform: rotate(-1deg);
   -ms-transform: rotate(-1deg);
@@ -287,7 +319,7 @@
   transform: rotate(-1deg);
 }
 
-/* line 62, ../scss/partials/_functions.scss */
+/* line 74, ../scss/partials/_functions.scss */
 .rotate-neg-2 {
   -moz-transform: rotate(-2deg);
   -ms-transform: rotate(-2deg);
@@ -295,7 +327,7 @@
   transform: rotate(-2deg);
 }
 
-/* line 65, ../scss/partials/_functions.scss */
+/* line 77, ../scss/partials/_functions.scss */
 .rotate-neg-3 {
   -moz-transform: rotate(-3deg);
   -ms-transform: rotate(-3deg);
@@ -303,7 +335,7 @@
   transform: rotate(-3deg);
 }
 
-/* line 68, ../scss/partials/_functions.scss */
+/* line 80, ../scss/partials/_functions.scss */
 .rotate-neg-4 {
   -moz-transform: rotate(-4deg);
   -ms-transform: rotate(-4deg);
@@ -311,7 +343,7 @@
   transform: rotate(-4deg);
 }
 
-/* line 71, ../scss/partials/_functions.scss */
+/* line 83, ../scss/partials/_functions.scss */
 .rotate-neg-5 {
   -moz-transform: rotate(-5deg);
   -ms-transform: rotate(-5deg);
