--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -41,7 +41,24 @@
 
 /* this is where the menu classes live */
 /* line 3, ../scss/partials/_menu.scss */
+.divider-top {
+  border-top: 1px solid rgba(235, 235, 235, 0.6);
+}
+
+/* line 7, ../scss/partials/_menu.scss */
+.divider-bottom {
+  border-bottom: 1px solid rgba(235, 235, 235, 0.6);
+}
+
+/* line 11, ../scss/partials/_menu.scss */
+.divider-both {
+  border-top: 1px solid rgba(235, 235, 235, 0.6);
+  border-bottom: 1px solid rgba(235, 235, 235, 0.6);
+}
+
+/* line 15, ../scss/partials/_menu.scss */
 .boozy-menu {
+  background-color: red;
   position: fixed;
   right: 20px;
   top: 20px;
@@ -54,24 +71,7 @@
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-
-/* line 17, ../scss/partials/_menu.scss */
-.divider-top {
-  border-top: 1px solid rgba(235, 235, 235, 0.6);
-}
-
-/* line 21, ../scss/partials/_menu.scss */
-.divider-bottom {
-  border-bottom: 1px solid rgba(235, 235, 235, 0.6);
-}
-
-/* line 25, ../scss/partials/_menu.scss */
-.divider-both {
-  border-top: 1px solid rgba(235, 235, 235, 0.6);
-  border-bottom: 1px solid rgba(235, 235, 235, 0.6);
-}
-
-/* line 29, ../scss/partials/_menu.scss */
+/* line 30, ../scss/partials/_menu.scss */
 .boozy-menu .fade-out {
   -webkit-opacity: 0;
   -moz-opacity: 0;
@@ -84,8 +84,7 @@
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-
-/* line 42, ../scss/partials/_menu.scss */
+/* line 43, ../scss/partials/_menu.scss */
 .boozy-menu .fade-in {
   -webkit-opacity: 1;
   -moz-opacity: 1;
@@ -98,55 +97,49 @@
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-
-/* line 55, ../scss/partials/_menu.scss */
+/* line 56, ../scss/partials/_menu.scss */
 .boozy-menu .font {
   font-family: helvetica;
 }
-
-/* line 58, ../scss/partials/_menu.scss */
+/* line 59, ../scss/partials/_menu.scss */
+.boozy-menu .boozy-comptuer {
+  border: 1px solid #B4D455;
+  height: 40px;
+  width: 50px;
+}
+/* line 64, ../scss/partials/_menu.scss */
 .boozy-menu .title {
+  padding: 5px;
   color: #545450;
 }
-
-/* line 61, ../scss/partials/_menu.scss */
+/* line 68, ../scss/partials/_menu.scss */
 .boozy-menu .switch {
   padding: 5px;
 }
-
-/* line 64, ../scss/partials/_menu.scss */
-.boozy-menu .switch .option {
+/* line 71, ../scss/partials/_menu.scss */
+.boozy-menu .option {
   width: 10px;
   height: 10px;
   border-radius: 20px;
 }
-
-/* line 69, ../scss/partials/_menu.scss */
-.boozy-menu .switch .on {
+/* line 76, ../scss/partials/_menu.scss */
+.boozy-menu .on {
   background-color: green;
 }
-
-/* line 72, ../scss/partials/_menu.scss */
-.boozy-menu .switch .off {
+/* line 79, ../scss/partials/_menu.scss */
+.boozy-menu .off {
   background-color: red;
 }
-
-/* line 75, ../scss/partials/_menu.scss */
-.boozy-menu .switch .deactivated {
+/* line 82, ../scss/partials/_menu.scss */
+.boozy-menu .deactivated {
   background-color: #545450;
 }
-
-/* line 78, ../scss/partials/_menu.scss */
+/* line 85, ../scss/partials/_menu.scss */
 .boozy-menu .control {
   width: 172px;
 }
 
-/* line 81, ../scss/partials/_menu.scss */
-.boozy-menu .control:hover {
-  background-color: #ECF1DA;
-}
-
-/* line 84, ../scss/partials/_menu.scss */
+/* line 90, ../scss/partials/_menu.scss */
 .boozy-menu.hide-menu {
   -webkit-transform: translateY(-92%);
   -moz-transform: translateY(-92%);
