--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -102,44 +102,53 @@
   font-family: helvetica;
 }
 /* line 59, ../scss/partials/_menu.scss */
-.boozy-menu .boozy-comptuer {
+.boozy-menu .boozy-computer {
   border: 1px solid #B4D455;
-  height: 40px;
-  width: 50px;
+  height: 100px;
+  width: 300px;
 }
 /* line 64, ../scss/partials/_menu.scss */
+.boozy-menu .drink-container {
+  width: 320px;
+  height: 17px;
+}
+/* line 68, ../scss/partials/_menu.scss */
+.boozy-menu .drop-hover {
+  border: 5px solid black;
+}
+/* line 71, ../scss/partials/_menu.scss */
 .boozy-menu .title {
   padding: 5px;
   color: #545450;
 }
-/* line 68, ../scss/partials/_menu.scss */
+/* line 75, ../scss/partials/_menu.scss */
 .boozy-menu .switch {
   padding: 5px;
 }
-/* line 71, ../scss/partials/_menu.scss */
+/* line 78, ../scss/partials/_menu.scss */
 .boozy-menu .option {
   width: 10px;
   height: 10px;
   border-radius: 20px;
 }
-/* line 76, ../scss/partials/_menu.scss */
+/* line 83, ../scss/partials/_menu.scss */
 .boozy-menu .on {
   background-color: green;
 }
-/* line 79, ../scss/partials/_menu.scss */
+/* line 86, ../scss/partials/_menu.scss */
 .boozy-menu .off {
   background-color: red;
 }
-/* line 82, ../scss/partials/_menu.scss */
+/* line 89, ../scss/partials/_menu.scss */
 .boozy-menu .deactivated {
   background-color: #545450;
 }
-/* line 85, ../scss/partials/_menu.scss */
+/* line 92, ../scss/partials/_menu.scss */
 .boozy-menu .control {
   width: 172px;
 }
 
-/* line 90, ../scss/partials/_menu.scss */
+/* line 97, ../scss/partials/_menu.scss */
 .boozy-menu.hide-menu {
   -webkit-transform: translateY(-92%);
   -moz-transform: translateY(-92%);
