a dusting of responsive shit

--- a/media/scss/boozybrowser.scss
+++ b/media/scss/boozybrowser.scss
@@ -1,5 +1,6 @@
 @import 'partials/compass_includes';
 @import 'partials/mixins';
+@import 'partials/media-queries';
 
 @import 'partials/demo';
 @import 'partials/menu';
