--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -46,32 +46,41 @@
       Lovingly lifted from the following:
       http://css-tricks.com/media-queries-sass-3-2-and-codekit/
   */
+  /*  
+      Lovingly lifted from the following:
+      http://css-tricks.com/media-queries-sass-3-2-and-codekit/
+  */
 }
 @media (max-width: 650px) {
   /* line 2, ../scss/partials/_menu.scss */
   .fa {
-    width: 84%;
+    font-size: 40px;
+  }
+}
+@media (max-width: 1250px) {
+  /* line 2, ../scss/partials/_menu.scss */
+  .fa {
     font-size: 40px;
   }
 }
 
-/* line 9, ../scss/partials/_menu.scss */
+/* line 11, ../scss/partials/_menu.scss */
 .divider-top {
   border-top: 1px solid rgba(235, 235, 235, 0.6);
 }
 
-/* line 13, ../scss/partials/_menu.scss */
+/* line 15, ../scss/partials/_menu.scss */
 .divider-bottom {
   border-bottom: 1px solid rgba(235, 235, 235, 0.6);
 }
 
-/* line 17, ../scss/partials/_menu.scss */
+/* line 19, ../scss/partials/_menu.scss */
 .divider-both {
   border-top: 1px solid rgba(235, 235, 235, 0.6);
   border-bottom: 1px solid rgba(235, 235, 235, 0.6);
 }
 
-/* line 21, ../scss/partials/_menu.scss */
+/* line 23, ../scss/partials/_menu.scss */
 .boozy-menu {
   background-color: red;
   position: fixed;
@@ -90,7 +99,7 @@
       http://css-tricks.com/media-queries-sass-3-2-and-codekit/
   */
 }
-/* line 36, ../scss/partials/_menu.scss */
+/* line 38, ../scss/partials/_menu.scss */
 .boozy-menu .fade-out {
   -webkit-opacity: 0;
   -moz-opacity: 0;
@@ -103,7 +112,7 @@
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 49, ../scss/partials/_menu.scss */
+/* line 51, ../scss/partials/_menu.scss */
 .boozy-menu .fade-in {
   -webkit-opacity: 1;
   -moz-opacity: 1;
@@ -116,64 +125,63 @@
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 62, ../scss/partials/_menu.scss */
+/* line 64, ../scss/partials/_menu.scss */
 .boozy-menu .font {
   font-family: helvetica;
 }
-/* line 65, ../scss/partials/_menu.scss */
+/* line 67, ../scss/partials/_menu.scss */
 .boozy-menu .boozy-computer {
   border: 1px solid #B4D455;
   height: 100px;
   width: 300px;
 }
-/* line 70, ../scss/partials/_menu.scss */
+/* line 72, ../scss/partials/_menu.scss */
 .boozy-menu .drink-container {
   width: 320px;
-  height: 17px;
 }
-/* line 74, ../scss/partials/_menu.scss */
+/* line 75, ../scss/partials/_menu.scss */
 .boozy-menu .drop-hover {
   border: 5px solid black;
 }
-/* line 77, ../scss/partials/_menu.scss */
+/* line 78, ../scss/partials/_menu.scss */
 .boozy-menu .title {
   padding: 5px;
   color: #545450;
 }
-/* line 81, ../scss/partials/_menu.scss */
+/* line 82, ../scss/partials/_menu.scss */
 .boozy-menu .switch {
   padding: 5px;
 }
-/* line 84, ../scss/partials/_menu.scss */
+/* line 85, ../scss/partials/_menu.scss */
 .boozy-menu .option {
   width: 10px;
   height: 10px;
   border-radius: 20px;
 }
-/* line 89, ../scss/partials/_menu.scss */
+/* line 90, ../scss/partials/_menu.scss */
 .boozy-menu .on {
   background-color: green;
 }
-/* line 92, ../scss/partials/_menu.scss */
+/* line 93, ../scss/partials/_menu.scss */
 .boozy-menu .off {
   background-color: red;
 }
-/* line 95, ../scss/partials/_menu.scss */
+/* line 96, ../scss/partials/_menu.scss */
 .boozy-menu .deactivated {
   background-color: #545450;
 }
-/* line 98, ../scss/partials/_menu.scss */
+/* line 99, ../scss/partials/_menu.scss */
 .boozy-menu .control {
   width: 172px;
 }
 @media (max-width: 650px) {
-  /* line 21, ../scss/partials/_menu.scss */
+  /* line 23, ../scss/partials/_menu.scss */
   .boozy-menu {
     width: 84%;
   }
 }
 
-/* line 106, ../scss/partials/_menu.scss */
+/* line 107, ../scss/partials/_menu.scss */
 .boozy-menu.hide-menu {
   -webkit-transform: translateY(-92%);
   -moz-transform: translateY(-92%);
