--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -40,47 +40,23 @@
 }
 
 /* this is where the menu classes live */
-/* line 2, ../scss/partials/_menu.scss */
-.fa {
-  /*  
-      Lovingly lifted from the following:
-      http://css-tricks.com/media-queries-sass-3-2-and-codekit/
-  */
-  /*  
-      Lovingly lifted from the following:
-      http://css-tricks.com/media-queries-sass-3-2-and-codekit/
-  */
-}
-@media (max-width: 650px) {
-  /* line 2, ../scss/partials/_menu.scss */
-  .fa {
-    font-size: 40px;
-  }
-}
-@media (max-width: 1250px) {
-  /* line 2, ../scss/partials/_menu.scss */
-  .fa {
-    font-size: 40px;
-  }
-}
-
-/* line 11, ../scss/partials/_menu.scss */
+/* line 3, ../scss/partials/_menu.scss */
 .divider-top {
   border-top: 1px solid rgba(235, 235, 235, 0.6);
 }
 
-/* line 15, ../scss/partials/_menu.scss */
+/* line 7, ../scss/partials/_menu.scss */
 .divider-bottom {
   border-bottom: 1px solid rgba(235, 235, 235, 0.6);
 }
 
-/* line 19, ../scss/partials/_menu.scss */
+/* line 11, ../scss/partials/_menu.scss */
 .divider-both {
   border-top: 1px solid rgba(235, 235, 235, 0.6);
   border-bottom: 1px solid rgba(235, 235, 235, 0.6);
 }
 
-/* line 23, ../scss/partials/_menu.scss */
+/* line 15, ../scss/partials/_menu.scss */
 .boozy-menu {
   background-color: red;
   position: fixed;
@@ -99,7 +75,11 @@
       http://css-tricks.com/media-queries-sass-3-2-and-codekit/
   */
 }
-/* line 38, ../scss/partials/_menu.scss */
+/* line 30, ../scss/partials/_menu.scss */
+.boozy-menu .drink {
+  font-size: 40px;
+}
+/* line 34, ../scss/partials/_menu.scss */
 .boozy-menu .fade-out {
   -webkit-opacity: 0;
   -moz-opacity: 0;
@@ -112,7 +92,7 @@
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 51, ../scss/partials/_menu.scss */
+/* line 47, ../scss/partials/_menu.scss */
 .boozy-menu .fade-in {
   -webkit-opacity: 1;
   -moz-opacity: 1;
@@ -125,63 +105,63 @@
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 64, ../scss/partials/_menu.scss */
+/* line 60, ../scss/partials/_menu.scss */
 .boozy-menu .font {
   font-family: helvetica;
 }
-/* line 67, ../scss/partials/_menu.scss */
+/* line 63, ../scss/partials/_menu.scss */
 .boozy-menu .boozy-computer {
   border: 1px solid #B4D455;
   height: 100px;
   width: 300px;
 }
-/* line 72, ../scss/partials/_menu.scss */
+/* line 68, ../scss/partials/_menu.scss */
 .boozy-menu .drink-container {
   width: 320px;
 }
-/* line 75, ../scss/partials/_menu.scss */
+/* line 71, ../scss/partials/_menu.scss */
 .boozy-menu .drop-hover {
   border: 5px solid black;
 }
-/* line 78, ../scss/partials/_menu.scss */
+/* line 74, ../scss/partials/_menu.scss */
 .boozy-menu .title {
   padding: 5px;
   color: #545450;
 }
-/* line 82, ../scss/partials/_menu.scss */
+/* line 78, ../scss/partials/_menu.scss */
 .boozy-menu .switch {
   padding: 5px;
 }
-/* line 85, ../scss/partials/_menu.scss */
+/* line 81, ../scss/partials/_menu.scss */
 .boozy-menu .option {
   width: 10px;
   height: 10px;
   border-radius: 20px;
 }
-/* line 90, ../scss/partials/_menu.scss */
+/* line 86, ../scss/partials/_menu.scss */
 .boozy-menu .on {
   background-color: green;
 }
-/* line 93, ../scss/partials/_menu.scss */
+/* line 89, ../scss/partials/_menu.scss */
 .boozy-menu .off {
   background-color: red;
 }
-/* line 96, ../scss/partials/_menu.scss */
+/* line 92, ../scss/partials/_menu.scss */
 .boozy-menu .deactivated {
   background-color: #545450;
 }
-/* line 99, ../scss/partials/_menu.scss */
+/* line 95, ../scss/partials/_menu.scss */
 .boozy-menu .control {
   width: 172px;
 }
 @media (max-width: 650px) {
-  /* line 23, ../scss/partials/_menu.scss */
+  /* line 15, ../scss/partials/_menu.scss */
   .boozy-menu {
     width: 84%;
   }
 }
 
-/* line 107, ../scss/partials/_menu.scss */
+/* line 103, ../scss/partials/_menu.scss */
 .boozy-menu.hide-menu {
   -webkit-transform: translateY(-92%);
   -moz-transform: translateY(-92%);
